assets/css/main.css
/* ... */
.company_blogs > .company_blogs_title{
	margin-top: 8rem;
	text-transform: uppercase;
	font-weight: 700;
	z-index: 2;
	display: flex;
	justify-content: center;
	align-items: center;
	text-align: center;
	flex-direction: column;
}

.company_blogs > .company_blogs_title .latest{
	font-size: 1.2rem;
	color: var(--main-color);
	letter-spacing: .5rem;
}

.company_blogs > .company_blogs_title .new_event{
	font-size: 2.4rem;
	color: var(--text-color);
	margin-top: 2rem;
	font-weight: 700;
}

.company_blogs > .company_blogs_title .borders{
	border-bottom: 2px solid var(--main-color);
	width: 5rem;
	margin-top: 3rem;
}

.company_blogs .company_blogs_post{
	margin-top: 5rem;
	z-index: 2;
	margin-bottom: 15rem;
}

.company_blogs .company_blogs_post .row .col-xl-12 .company_blogs_post_content{
	background-color: #fff;
	width: 100%;
	display: flex;
	flex-direction: column;
	position: relative;
}

.company_blogs .company_blogs_post .row .col-xl-12 .company_blogs_post_content
.company_blogs_post_content_description{
	margin: 2rem 2rem;
	font-family: 'open-sans';
	font-size: 1.4rem;
	color: #424242;
	font-weight: 600;
}

.company_blogs .company_blogs_post .row .col-xl-12 .company_blogs_post_content
.border_content{
	width: 100%;
	border-bottom: 1px solid rgba(0,0,0,0.3);
	margin-left: 0;
}

.company_blogs .company_blogs_post .company_blogs_post_content a{
	color: var(--text-color);
	text-decoration: none;
	font-size: 1.6rem;
}

.company_blogs .company_blogs_post .company_blogs_post_content a h3{
	margin-top: 3rem;
	margin-left: 2rem;
}

.company_blogs .company_blogs_post .company_blogs_post_content a:hover{
	transition: .4s ease-in;
	color: var(--main-color);
	cursor: pointer;
}

.company_blogs .company_blogs_post .company_blogs_post_content
.company_blogs_post_content_reaction{
	display: flex;
	margin: 1.5rem 2rem;
}

.company_blogs .company_blogs_post .company_blogs_post_content
.company_blogs_post_content_reaction .company_blogs_post_content_like{
	margin-left: 3rem;
}

.company_blogs .company_blogs_post .row .col-xl-12 .company_blogs_post_content
.time_posted{
	width: 6rem;
	height: 6rem;
	position: absolute;
	top: 0;
	margin-left: 2rem;
	margin-top: 2.5rem;
	background-color: #a1d1dd;
}

.company_blogs .company_blogs_post .row .col-xl-12 .company_blogs_post_content
.time_posted .time_and_date{
	border: 1px solid #fff;
	margin: 1rem;
	width: 4rem;
	height: 4rem;
	text-align: center;
	font-size: 1.5rem;
	color: #fff;
	display: flex;
	justify-content: center;
	align-items: center;
	font-weight: 550;
}

.swiper-container {
    width: 100%;
    height: 100%;
    margin-left: auto;
    margin-right: auto;
}
.swiper-slide {
      /* Center slide text vertically */
 	display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;
}
.swiper-container .swiper-pagination{
	margin-bottom: 5rem;
}
.swiper-container .swiper-pagination-bullet {

      text-align: center;
      line-height: 20px;
      font-size: 12px;
      opacity: 1;
      background: rgba(116,87,161,0.4);
    }
.swiper-container .swiper-pagination-bullet-active {
      color: var(--main-color);
      background: var(--main-color);
      transform: scale(1.5);
      transition: .4s ease-in;
    }

 .company_blogs_post_content img{
 	max-width: 100%;
 	max-height: 100%;
 	filter: grayscale(100%);
 }

 .company_blogs_post_content img:hover{
 	filter: grayscale(0);
 	transition: .4s ease-in;
 }

 .img-content{
 	width: 100%;
 	height: 18.1rem;
 }

/*End CSS blogs*/
/*CSS footer*/
footer{
	width: 100%;
	position: absolute;
	background-color: var(--footer-background-color);
}

footer .footer_about_us .footer_about_us_title,
footer .footer_navigation .footer_navigation_title,
footer .footer_address .footer_address_title
{
	font-size: 1.6rem;
	color: var(--footer-title-text-color);
}

footer .first-menu{
	border-bottom: 1px solid rgba(0,0,0,0.3);
	margin-top: 3rem;
}

footer .footer_about_us .footer_about_us_title_border,
footer .footer_navigation .footer_navigation_title_border,
footer .footer_address .footer_address_title_border
{
	border-bottom: 1px solid rgba(0,0,0,0.3);
	margin-top: 3rem;
}

footer .footer_about_us .footer_about_us_content{
	font-size: 1.4rem;
	color: var(--footer-text-color);
	margin-top: 2.3rem;
	font-family: 'Open Sans', ;
}

footer .footer_about_us .footer_about_us_social_links{
	margin-top: 3rem;
	font-size: 1.5rem;
	color: var(--footer-text-color);
	margin-bottom: 3rem;
}

footer .footer_about_us .footer_about_us_social_links i{
	margin-right: 3rem;
	margin-bottom: 3rem;
}

footer .footer_navigation_menu{
	display: flex;
	justify-content: space-between;
	margin-top: 2.3rem;
	font-size: 1.4rem;
	line-height: 2rem;
}

footer .footer_navigation_menu a{
	color: var(--footer-text-color);
	text-decoration: none;
	font-family: 'Open Sans', ;
}

footer .footer_navigation_menu a:hover{
	text-decoration: underline;
	color: var(--footer-hover-text-color);
}

footer .footer_navigation_menu .footer_navigation_menu_right{
	margin-right: 3rem;
}

footer .footer_address .footer_address_content{
	margin-top: 2.4rem;
	color: var(--footer-text-color);
	font-size: 1.5rem;
}

footer .footer_address .footer_address_content div{
	margin-top: 1.5rem;
	display: flex;
}

footer .footer_address .footer_address_content 
span.footer_address_information{
	margin-left: 1rem;
	text-align: left;
	display: block;
	width: 18rem;
}

footer .copyright_payment{
	color: var(--footer-text-color);
	font-size: 1.5rem;
	display: flex;
	justify-content: space-between;
}

footer .copyright_payment .footer_copyright .footer_copyright_title i{
	color: red;
}

footer .copyright_payment .footer_copyright .footer_copyright_title a{
	color: #fff;
	text-decoration: none;
}
/* ... */

